overflow fixed

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   font-style: normal;
 }
 
-html, body {margin: 0; height: 100%; overflow: hidden}
+html, body {margin: 0; height: 100%; overflow: scroll}
 
 
 body { 
